prevent page breaks inside profile items

--- a/src/scss/components/_roster.scss
+++ b/src/scss/components/_roster.scss
@@ -6,6 +6,7 @@
 .roster__item {
   @include make-gutters;
   height: 450px;
+  break-inside: avoid;
   float: left;
   width: 50%;
 }
